--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -75,6 +75,11 @@
 								<i class="glyphicon glyphicon-cog"></i>&nbsp;<span>工具配置</span>
 							</a>
 						</li>
+						<li data-href="pages/cis/email-list.html" data-title="邮箱配置">
+							<a href="#">
+								<i class="glyphicon glyphicon-log-in"></i>&nbsp;<span>邮箱配置</span>
+							</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -108,5 +113,6 @@
 		<script src="js/cis/tool.js"></script>
 		<script src="js/cis/module.js"></script>
 		<script src="js/cis/role.js"></script>
+		<script src="js/cis/email.js"></script>
 	</body>
 </html>
