--- a/openci-platform-web/src/main/webapp/pages/cis/project-list.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-list.html
@@ -26,7 +26,7 @@
 				render: function(item, name, index){
 					var tools = [];
 					$.each(item[name], function(){
-						tools.push(this.toolConfiguration.name);
+						tools.push('<a href="'+this.toolRequestAddress+'" target="_">'+this.toolConfiguration.name+'</a>');
 					});
 					return tools.join(',');
 				}
@@ -76,7 +76,7 @@
 				var tools = [];
 				$.each(project.tools, function(){
 					var html = [];
-					html.push('<div class="panel panel-default"><div class="panel-heading">'+this.toolConfiguration.name+'</div><table class="table"><thead><tr><th>创建过程</th><th>时间</th><th>结果</th><th>原因</th></tr></thead><tbody>');
+					html.push('<div class="panel panel-default"><div class="panel-heading">'+this.toolConfiguration.name+'('+this.status+')</div><table class="table"><thead><tr><th>创建过程</th><th>时间</th><th>结果</th><th>原因</th></tr></thead><tbody>');
 					$.each(this.toolInterfaceImplements, function(){
 						html.push('<tr><td>'+this.toolInterface+'</td><td>'+this.executeDate+'</td><td>'+this.success+'</td><td>'+this.record+'</td></tr>');
 					});
