添加删除工具配置，开发者ID校验

--- a/openci-platform-web/src/main/webapp/pages/cis/tool-list.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/tool-list.html
@@ -197,7 +197,7 @@
 						$this.confirm({
 							content : '确定要删除所选记录吗?',
 							callBack : function() {
-								toolManager.del(toolType, $this, data.item);
+								toolManager.del(toolType, $this, indexs);
 							}
 						});
 					}
