--- a/openci-platform-web/src/main/webapp/pages/cis/tool-template.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/tool-template.html
@@ -8,7 +8,7 @@
             <div class="modal-body" style="padding-left:45px; padding-right:65px;">
                 <form class="form-horizontal" role="form">
                 	<div class="form-group">
-                        <label class="col-lg-3 control-label">工具名:</label>
+                        <label class="col-lg-3 control-label">工具名称:</label>
                         <div class="col-lg-9">
                             <input type="text" class="form-control" id="name"><span class="required">*</span>
                         </div>
