--- a/openci-platform-web/src/main/webapp/pages/cis/project-add.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-add.html
@@ -140,5 +140,18 @@
 			<span class="glyphicon glyphicon-ok"></span>&nbsp;完成
 		</button>
 	</div>
+	<div class="modal fade" id="loadDialog">
+	  <div class="modal-dialog" style="padding-top: 18%; width: 250px;">
+	    <div class="modal-content">
+	      <div class="modal-body" style="padding:10;">
+	      		<p>正在创建项目，请等待</p>
+		        <div class="progress progress-striped active" style="margin-bottom:0">
+				  <div class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+				  </div>
+				</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 </div>
 <script src="js/cis/preject-add.js"></script>
