--- a/openci-platform-web/src/main/webapp/pages/errors/500.html
+++ b/openci-platform-web/src/main/webapp/pages/errors/500.html
@@ -28,9 +28,9 @@
 	</head>
 	<body>
 		<div class="error-page">
-			<h1 class="error-code">Error 404</h1>
+			<h1 class="error-code">Error 500</h1>
 			<p class="error-description">
-				Oops! The requested page could not be found
+				A generic error message, given when no more specific message is suitable
 			</p>
 		</div>
 	</body>
