--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -106,7 +106,7 @@
 		<script src="lib/bootstrap/js/bootstrap.js"></script>
 		<script src="lib/respond.min.js"></script>
 		<script src="lib/koala-ui.plugin.js"></script>
-		<script src="lib/koala_wizard.js"></script>
+		<script src="js/cis/project_wizard.js"></script>
 		<script src="lib/validate.js"></script>
 		<script src="js/main.js" ></script>
 		<script src="js/cis/developer.js"></script>
