--- a/openci-platform-web/src/main/webapp/pages/cis/project-detail.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-detail.html
@@ -1,5 +1,20 @@
 <div class="modal fade">
-	<div class="modal-dialog" style="width: 80%;">
+	<style>
+		.tools .table td.first {
+			width: 30%;
+		}
+		.tools .table td.second {
+			width: 20%;
+		}
+		.tools .table td.third {
+			width: 50%;
+		}
+		.tools .table td,
+		.tools .table th {
+			word-wrap: break-word;
+		}
+	</style>
+	<div class="modal-dialog" style="width: 90%;">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
