修改登录页面

--- a/openci-platform-web/src/main/webapp/login.html
+++ b/openci-platform-web/src/main/webapp/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 	<head>
-		<title>登陆</title>
+		<title>登录</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
 		<style type="text/css">
