--- a/openci-platform-web/src/main/webapp/pages/cis/project-detail.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-detail.html
@@ -1,17 +1,18 @@
 <div class="modal fade">
 	<style>
 		.tools .table td.first {
-			width: 30%;
+			width: 32%;
 		}
 		.tools .table td.second {
-			width: 20%;
+			width: 25%;
 		}
 		.tools .table td.third {
-			width: 50%;
+			width: 43%;
 		}
 		.tools .table td,
 		.tools .table th {
 			word-wrap: break-word;
+			word-break: break-all;
 		}
 	</style>
 	<div class="modal-dialog" style="width: 90%;">
@@ -67,7 +68,7 @@
 					<div class="form-group" style="margin-bottom: 0;">
 						<div class="panel panel-default">
 						  <div class="panel-heading">开发者</div>
-						  <div class="panel-body tools" id="devlopers">
+						  <div class="panel-body tools" id="devlopers" style="word-wrap: break-word;word-break: break-all;">
 						    	
 						 </div>
 						</div>
